<resources>
    <string name="app_name">RoomDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_user">Add new User</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="age">Age</string>
    <string name="enter_age">Age</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="btn_back">Back Button</string>
    <string name="_1">1</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_xyz_com">johndoe@xyz.com</string>
    <string name="user_list">User List</string>
    <string name="delete">Delete</string>
    <string name="user_id">"User : "</string>
</resources>