<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UpdateUserFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_back"
        android:src="@drawable/round_keyboard_arrow_left_24"
        app:layout_constraintTop_toTopOf="@id/updateTitle"
        app:layout_constraintBottom_toBottomOf="@id/updateTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        android:textSize="20sp"
        android:fontFamily="@font/sulphur_point_bold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/updateTitle"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sulphur_point_regular"
            android:text="@string/name"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:inputType="text"
            android:fontFamily="@font/sulphur_point_regular"
            android:hint="@string/enter_name"
            android:id="@+id/etUpdateName"
            android:background="@drawable/box_outline"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="@font/sulphur_point_regular"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:fontFamily="@font/sulphur_point_regular"
            android:id="@+id/etUpdateEmail"
            android:background="@drawable/box_outline"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="@font/sulphur_point_regular"
            android:layout_height="wrap_content"
            android:text="@string/age"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:inputType="number"
            android:fontFamily="@font/sulphur_point_regular"
            android:hint="@string/enter_age"
            android:id="@+id/etUpdateAge"
            android:background="@drawable/box_outline"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box_outline"
            android:text="@string/update_user"
            android:textAllCaps="false"
            android:fontFamily="@font/sulphur_point_regular"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>