<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/userIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:fontFamily="@font/sulphur_point_regular"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="21sp"
        android:fontFamily="@font/sulphur_point_regular"
        app:layout_constraintStart_toEndOf="@id/userIdText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:textSize="21sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sulphur_point_regular"
        app:layout_constraintTop_toBottomOf="@id/userId"
        app:layout_constraintStart_toStartOf="@+id/userId" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:fontFamily="@font/sulphur_point_regular"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"/>


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poiret_one_regular"
        android:text="@string/johndoe_xyz_com"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"/>

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:src="@drawable/round_delete_24"
        app:layout_constraintTop_toTopOf="@+id/userId"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>